--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,6 +4,7 @@
     <title>Text to Motion Visualization</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.4.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css">
+
 </head>
 <body>
     <div class="container">
@@ -16,24 +17,12 @@
             <label for="soundInput" class="form-label">Select a sound:</label>
             <select class="form-select" id="soundInput">
                 <option selected>Select a sound...</option>
-                <!-- Populating the select dropdown with audio files from the assets/audio folder -->
-                <script>
-                    var audioFolder = "assets/audio/";
-                    var audioFiles = [
-                        "sound1.mp3",
-                        "sound2.mp3",
-                        "sound3.mp3"
-                    ];
-                    audioFiles.forEach(function(file) {
-                        document.getElementById('soundInput').innerHTML += '<option value="' + audioFolder + file + '">' + file + '</option>';
-                    });
-                </script>
             </select>
         </div>
-        <button class="btn btn-primary" onclick="visualize()">Generate Visualization</button>
+        <button class="btn btn-primary" id="generateButton">Generate Visualization</button>
         <div id="visualization" class="mt-3"></div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
