--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,28 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Text to Motion Visualization</title>
+    <title>Audio Text Visualization</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.4.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="style.css">
-
+    <style>
+        /* Your additional styles here */
+    </style>
 </head>
 <body>
     <div class="container">
-        <h1 class="mt-5">Text to Motion Visualization</h1>
+        <h1 class="mt-5">Audio Text Visualization</h1>
         <div class="mb-3">
             <label for="textInput" class="form-label">Enter your text:</label>
             <textarea class="form-control" id="textInput" rows="3"></textarea>
         </div>
         <div class="mb-3">
-            <label for="soundInput" class="form-label">Select a sound:</label>
-            <select class="form-select" id="soundInput">
-                <option selected>Select a sound...</option>
-            </select>
+            <label for="audioInput" class="form-label">Select an audio file:</label>
+            <input type="file" class="form-control" id="audioInput" accept="audio/*">
         </div>
         <button class="btn btn-primary" id="generateButton">Generate Visualization</button>
         <div id="visualization" class="mt-3"></div>
     </div>
-
+ 
     <script src="index.js"></script>
 </body>
 </html>
