--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,9 +3,7 @@
 <head>
     <title>Audio Text Visualization</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.4.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        /* Your additional styles here */
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
@@ -19,8 +17,8 @@
             <input type="file" class="form-control" id="audioInput" accept="audio/*">
         </div>
         <button class="btn btn-primary" id="generateButton">Generate Visualization</button>
-        <div id="visualization" class="mt-3"></div>
     </div>
+    <div id="visualization" class="mt-3"></div>
  
     <script src="index.js"></script>
 </body>
